--- a/py_ds_ch02.ipynb
+++ b/py_ds_ch02.ipynb
@@ -1300,6 +1300,399 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Control Flow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### If, elif, and else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "positive and larger than or equal to 5\n"
+    }
+   ],
+   "source": [
+    "x = 6\n",
+    "if x < 0:\n",
+    "    print('It is negative')\n",
+    "elif x == 0:\n",
+    "    print('Equal to zero')\n",
+    "else: \n",
+    "    print('positive and larger than or equal to 5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 5\n",
+    "b = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = 8\n",
+    "d = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Made it!\n"
+    }
+   ],
+   "source": [
+    "if a < b or c> d:\n",
+    "    print('Made it!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Continue keyword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence = [1, 2, None, 4, None, 5]\n",
+    "total = 0\n",
+    "for value in sequence:\n",
+    "    if value is None:\n",
+    "        continue\n",
+    "    total += value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the first condition is matched, the second condition will not be used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "12"
+     },
+     "metadata": {},
+     "execution_count": 75
+    }
+   ],
+   "source": [
+    "total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### For loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence = [1, 2, 0, 4, 6, 5, 2, 1]\n",
+    "total_until_5 = 0\n",
+    "for value in sequence:\n",
+    "    if value == 5:\n",
+    "        break\n",
+    "    total_until_5 += value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "13"
+     },
+     "metadata": {},
+     "execution_count": 80
+    }
+   ],
+   "source": [
+    "total_until_5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Break keywork only works "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "(0, 0)\n(1, 0)\n(1, 1)\n(2, 0)\n(2, 1)\n(2, 2)\n(3, 0)\n(3, 1)\n(3, 2)\n(3, 3)\n"
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    for j in range(4):\n",
+    "        if j > i:\n",
+    "            break\n",
+    "        print((i, j))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### While loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 256\n",
+    "total = 0\n",
+    "while x > 0:\n",
+    "    if total > 500:\n",
+    "        break\n",
+    "    total += x\n",
+    "    x = x //2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "4"
+     },
+     "metadata": {},
+     "execution_count": 85
+    }
+   ],
+   "source": [
+    "x "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "psoitive!\n"
+    }
+   ],
+   "source": [
+    "if x < 0:\n",
+    "    print('negative!')\n",
+    "elif x == 0:\n",
+    "    pass\n",
+    "else:\n",
+    "    print('psoitive!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "range(0, 10)"
+     },
+     "metadata": {},
+     "execution_count": 87
+    }
+   ],
+   "source": [
+    "range(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+     },
+     "metadata": {},
+     "execution_count": 88
+    }
+   ],
+   "source": [
+    "list(range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]"
+     },
+     "metadata": {},
+     "execution_count": 89
+    }
+   ],
+   "source": [
+    "list(range(0, 20, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[5, 4, 3, 2, 1]"
+     },
+     "metadata": {},
+     "execution_count": 90
+    }
+   ],
+   "source": [
+    "list(range(5, 0, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sum = 0\n",
+    "for i in range(100000):\n",
+    "    # % is the modulo operator\n",
+    "    if i % 3 == 0 or i % 5 == 0:\n",
+    "        sum += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "46667"
+     },
+     "metadata": {},
+     "execution_count": 93
+    }
+   ],
+   "source": [
+    "sum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ternary Expressions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'Non-negative'"
+     },
+     "metadata": {},
+     "execution_count": 95
+    }
+   ],
+   "source": [
+    "'Non-negative' if x >= 0 else 'Negative'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
